# NoSubVod-Desktop

./: .prettierignore  README.md  eslint.config.js  main.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml
extensions/devtool-explorer/: index.html  manifest.json
renderer/: index.html
server/: app.js
server/api/: twitch.js
server/public/: channel.html  index.html  player.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/server/: auth.rs  chat.rs  download.rs  download_paths.rs  dto.rs  history.rs  http_utils.rs  middleware.rs  mod.rs  routes.rs  screenshare.rs  state.rs  twitch.rs  types.rs  url_utils.rs  validation.rs
src/main/: index.ts
src/portal/: index.html  vite.config.ts
src/portal/src/: App.tsx  Channel.tsx  Downloads.tsx  ExtensionContext.tsx  History.tsx  Home.tsx  Live.tsx  Login.tsx  MultiView.tsx  Player.tsx  PlayerRTC.tsx  ScreenShare.tsx  Search.tsx  Settings.tsx  Trends.tsx  index.css  main.tsx
src/portal/src/components/: NSVPlayer.tsx  StreamCard.tsx  TopBar.tsx  VODCard.tsx
src/portal/src/components/home/: ChannelSearchCard.tsx  HistoryPreview.tsx  MySubsList.tsx  WatchlistPreview.tsx
src/portal/src/components/player/: ClipMode.tsx  LiveChatComponent.tsx  MarkerPanel.tsx  PlayerInfo.tsx  PlayerSidebar.tsx
src/portal/src/hooks/: useChannelData.ts  useDownloadsData.ts  useInfiniteScroll.ts  useScreenShareState.ts  useWebRTCViewer.ts
src/portal/src/utils/: storage.ts
src/renderer/: index.html  vite.config.ts
src/renderer/src/: App.tsx  index.css
src/server/: index.ts
src/server/routes/: api.ts
src/server/services/: history.service.ts  twitch.service.ts
src/shared/: types.ts
src/shared/components/: ErrorBoundary.tsx
src/shared/hooks/: useScreenShareState.ts
