[package]
name = "nosubvod-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "nosubvod_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
local-ip-address = "0.6"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = { version = "0.4", features = ["util"] }
regex = "1"
once_cell = "1"
tokio-util = "0.7"
http = "1"
futures = "0.3"
